# mobile-radio-monitor

./: .gitignore  CMakeLists.txt  Makefile.am  NEWS  README  autogen.sh  configure.ac
CMake_modules/GCR_CMake/macros/: BuildTargetScript.cmake  GenerateGXML.cmake  GlibCompileResourcesSupport.cmake
build-aux/: Makefile.am  mrm-enum-types-template.c  mrm-enum-types-template.h
data/: CMakeLists.txt  Makefile.am  es.aleksander.MobileRadioMonitor.pkexec.policy  es.aleksander.MobileRadioMonitor.pkexec.policy.in  mobile-radio-monitor.desktop
src/: CMakeLists.txt  Makefile.am  mrm-app.c  mrm-app.h  mrm-color-icon.c  mrm-color-icon.h  mrm-device.c  mrm-device.h  mrm-error.h  mrm-graph.c  mrm-graph.h  mrm-main.c  mrm-menu.ui  mrm-power-tab.c  mrm-power-tab.h  mrm-power-tab.ui  mrm-signal-tab.c  mrm-signal-tab.h  mrm-signal-tab.ui  mrm-window.c  mrm-window.h  mrm-window.ui  mrm.gresource.xml
tests/: CMakeLists.txt  Makefile.am  test-graph.c
