
EXTRA_DIST = \
	mobile-radio-monitor.desktop \
	mobile-radio-monitor.png

desktopdir = $(datadir)/applications
desktop_DATA = mobile-radio-monitor.desktop

# NOTE: yes, this is gnome-system-monitor's icon with other colors, yes.
# All credits go to jimmac, who I believe is the one who draw this one.
icon256dir = $(datadir)/icons/hicolor/256x256/apps
icon256_DATA = mobile-radio-monitor.png
